test/sema/exercise/member_expr_invalid_member.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct Struct {
  x: number
}

fn main(): unit {
  let s = Struct { x: 0 };

  let y = s.y;
  // CHECK: [[# @LINE - 1 ]]:12: error: 'Struct' has no member called 'y'
}
